==================== 2.16.2 ====================
2006-11-20  Don Scorgie  <dscorgie@cvs.gnome.org>

	* NEWS:
	* configure.in:
	- Version 2.16.2

2006-11-20  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-utils.c:
	When info:dir contains a link to a subdir,
	but not an info name, work as expected
	 (Really fixes bug #371680)
	
	* src/yelp-io-channel.c: 
	Check the file exists and is valid before trying
	to read it (fixes bug #371680)
	
	* src/yelp-gecko-services.cpp: 
	Fix printing ranges (bug #370618, Christian Persch)
	
	* src/yelp-info-parser.c: 
	When whitespace on new line of a note is < 2,
	don't crash (bug #376861)
	Fix crash on libc info page (bug #367410, Matthias Clasen)
	
2006-11-05  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-main.c:
	Don't crash when saving session (bug #364790)
	
	* src/yelp-search-pager.c: 
	Replace ':' chars in search strings with ' '
	Stops from crashing (bug #364768)
	Don't chew memory when search string contains
	2 consecutive spaces

2006-10-25  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-info-parser.c:
	Fix double free in stupid link types only used by gdb
	info page (apparently).  Bug #364850
	
	* src/yelp-search-pager.c: 
	Don't crash when searching for empty term.  Bug #363949
	
2006-10-07  Elijah Newren  <newren gmail com>

	* src/yelp-print.c (yelp_print_present_status_dialog): Remove
	markup from translatable messages.  #360450

2006-10-05  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-utils.c: 
	Don't crash when manpath (prog) || MANPATH (env.)
	is available
	
==================== 2.16.1 ====================
2006-10-02  Don Scorgie  <dscorgie@cvs.gnome.org>

	* NEWS:
	* configure.in:
	- Version 2.16.1
	
2006-09-29  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-settings.c: 
	* src/yelp-settings.h:
	* src/yelp-window.c:
	Make F7 toggle caret properly
	Set initial state of caret in prefs window

2006-09-17  Christian Persch  <chpe@cvs.gnome.org>

	* src/Yelper.cpp:
	* src/Yelper.h:
