@@ -97,7 +97,8 @@ yelp_LDADD =				\
 	$(BZ_LIBS)			\
 	$(X_LIBS)			\
 	$(MOZILLA_COMPONENT_LIBS)	\
-	$(MOZILLA_EXTRA_LIBS)
+	$(MOZILLA_EXTRA_LIBS)		\
+	$(MOZILLA_GLUE_LIBS)
 
 yelp_LDFLAGS = -R$(MOZILLA_HOME) $(AM_LDFLAGS)
 
