@@ -1,3 +1,11 @@
+2006-12-01  Christian Persch  <chpe@cvs.gnome.org>
+
+	* configure.in:
+	* m4/gecko.m4:
+	* src/Makefile.am:
+	* src/Yelper.cpp:
+	Fix for mozilla API change on trunk.
+
 ==================== 2.16.2 ====================
 2006-11-20  Don Scorgie  <dscorgie@cvs.gnome.org>
 
